[package]
name = "rtlsdr-pure"
version = "0.1.1"
edition = "2024"
description = "Pure Rust RTL-SDR driver using cross_usb for native USB and WebUSB"
license = "GPL-2.0-or-later"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rtlsdr-pure"
keywords = ["radio"]

[dependencies]
cross_usb = "0.4.1"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "=0.3.77"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "=0.4.50"
web-sys = "=0.3.77"

[dev-dependencies]
futures-lite = "2.6.1"

[lib]
crate-type = ["cdylib", "rlib"]
