[package]
name = "rtlsdr-pure"
version = "0.1.1"
edition = "2024"
description = "Pure Rust RTL-SDR driver using cross_usb for native USB and WebUSB"
license = "GPL-2.0-or-later"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rtlsdr-pure"
keywords = ["radio"]

[dependencies]
cross_usb = "0.4.1"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "=0.3.102"
wasm-bindgen = "=0.2.125"
wasm-bindgen-futures = "=0.4.75"
web-sys = "=0.3.102"

[dev-dependencies]
futures-lite = "2.6.1"

[patch.crates-io]
cross_usb = { path = "vendor/cross_usb" }

[lib]
crate-type = ["cdylib", "rlib"]
