[package]
name = "rtlsdr-pure"
version = "0.1.3"
edition = "2024"
description = "Pure Rust RTL-SDR driver using cross_usb for native USB and WebUSB"
license = "GPL-2.0-or-later"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/rtlsdr-pure"
keywords = ["radio"]

[dependencies]
# TODO: depend on the real cross_usb when it gets its dependency version sorted.
cross_usb = { package = "cross_usb_versionbump", version = "0.4.1" }
#cross_usb = {path="vendor/cross_usb"}

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "=0.3.102"
wasm-bindgen = "=0.2.125"
wasm-bindgen-futures = "=0.4.75"
web-sys = "=0.3.102"

[dev-dependencies]
futures-lite = "2.6.1"

[patch.crates-io]
#cross_usb = { path = "vendor/cross_usb" }

[lib]
crate-type = ["cdylib", "rlib"]
